; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_ipq_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_ipq_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.ipq = type { i32 }
%struct.label = type { i32 }

@MAGIC_MBUF = common dso_local global i32 0, align 4
@MAGIC_IPQ = common dso_local global i32 0, align 4
@ipq_create = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mbuf*, %struct.label*, %struct.ipq*, %struct.label*)* @test_ipq_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_ipq_create(%struct.mbuf* %0, %struct.label* %1, %struct.ipq* %2, %struct.label* %3) #0 {
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca %struct.label*, align 8
  %7 = alloca %struct.ipq*, align 8
  %8 = alloca %struct.label*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %5, align 8
  store %struct.label* %1, %struct.label** %6, align 8
  store %struct.ipq* %2, %struct.ipq** %7, align 8
  store %struct.label* %3, %struct.label** %8, align 8
  %9 = load %struct.label*, %struct.label** %6, align 8
  %10 = load i32, i32* @MAGIC_MBUF, align 4
  %11 = call i32 @LABEL_CHECK(%struct.label* %9, i32 %10)
  %12 = load %struct.label*, %struct.label** %8, align 8
  %13 = load i32, i32* @MAGIC_IPQ, align 4
  %14 = call i32 @LABEL_CHECK(%struct.label* %12, i32 %13)
  %15 = load i32, i32* @ipq_create, align 4
  %16 = call i32 @COUNTER_INC(i32 %15)
  ret void
}

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
